# ff-bot

./: .gitignore  README.md  app.py  app_simple.py  config.py  data-scraper.py  fdr.py  fpl-players.py  fpl_players.csv  fuzzy_matches_debug.csv  modelling.ipynb  pyproject.toml  ref__all_fpl_datas.csv  reference_player_names.csv  rolling_predictions.html
.github/workflows/: daily-data-scraper--fbref.yml  daily-data-scraper--fpl.yml  daily-data-scraper.yml
data/: fdr.csv  fixture_data.csv
data/2024-2025/: fixture_data.csv
data/2024-2025/players/: players_defensive_actions.csv  players_goalkeeper.csv  players_miscellaneous.csv  players_passing.csv  players_passing_types.csv  players_possession.csv  players_summary.csv
data/2025-2026/: fixture_data.csv  fixture_data__pydoll.csv
data/2025-2026/players/: players_possession.csv  players_summary.csv
data/2025-2026/players_v2/: players_defense.csv  players_keeper.csv  players_misc.csv  players_passing.csv  players_possession.csv  players_summary.csv
data/fpl/: fpl_players.csv  fuzzy_matches_debug.csv  ref__all_fpl_datas.csv  reference_player_names.csv
data/players/: players_defensive_actions.csv  players_goalkeeper.csv  players_miscellaneous.csv  players_passing.csv  players_passing_types.csv  players_possession.csv  players_summary.csv
data/test-data/: fixtures_raw.csv
figures/: team_attack_ratings.html  team_quality_ratings.html
pages/: player_page.py  team_page.py
scripts/: data-scraper.py  fpl-players.py  pydoll-test.py
