[project]
name = "ff-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "asttokens>=3.0.0",
    "ipykernel>=6.30.1",
    "linearmodels>=7.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
    "pydoll-python>=2.12.0",
    "rapidfuzz>=3.14.3",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
[tool.uv.scripts]
setup = [
    "uv sync",
    "playwright install"
]
