[project]
name = "ff-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.2",
]

[tool.uv]
default-groups = ["app"]

[dependency-groups]
scraper-fpl = [
    "rapidfuzz>=3.14.3",
]
scraper-fbref =[
    "playwright>=1.55.0",
]
app = [
    "streamlit>=1.50.0",
    "altair>=5.5.0",
]
dev = [
    "ruff>=0.13.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "pydoll-python>=2.12.0",
    {include-group = "scraper-fpl"},
    {include-group = "scraper-fbref"},
    {include-group = "app"}
]
